# docgpt

./: .gitignore
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
backend/Eval/: Eval.py  RetrivalEval.py
backend/Eval/testing_data/: golden_dataset_125_questions.json
backend/app/AIProcess/EmbaddingService/: Qdrant.py
backend/app/Prompt/: AgentPrompt.py  DocumentParsingPrompt.py  QueryProcessorPrompt.py  RagPrompt.py
backend/app/api/: Evalapi.py  auth.py  conversations.py  documents.py
backend/app/core/: auth_middleware.py  config.py  constants.py  exceptions.py  langfuse.py  logging.py  middleware.py  rate_limiter.py  redis_cache.py  sanitization.py  security.py  websocket.py
backend/app/db/: session.py
backend/app/db/repositories/: __init__.py  conversation_repository.py  document_repository.py  user_repository.py
backend/app/models/: conversation.py  document.py  user.py
backend/app/schemas/: auth.py  conversation.py  document.py
backend/app/services/: auth.py  conversation_service.py  document_service.py  email_service.py  user_service.py
backend/app/services/AIServices/: AiDocumentProcess.py  DocumentChunking.py  DocumentParser.py  __init__.py  schemas.py
backend/app/services/ai/: __init__.py  schemas.py
backend/app/services/rag/: __init__.py  (+7 more)
backend/app/tasks/: __init__.py  arq_app.py  celery_app.py  document_tasks.py  eval_tasks.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: a36de3c7e0e2_initial_schema.py
(+71 files in other folders)
