[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "arq>=0.26.0",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-jose>=3.5.0",
    "redis>=5.0.0,<6",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "pymupdf>=1.28.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-classic>=1.0.8",
    "langchain-openai>=1.3.5",
    "langchain-huggingface>=1.2.2",
    "pandas>=3.0.3",
    "langchain-qdrant>=1.1.0",
    "fastembed>=0.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
